# openSIL

./: .gitattributes  .gitignore  CODEOWNERS  Kconfig  Kconfig.IP  Kconfig.Plat  Kconfig.Skt  Kconfig.SoC  README.md  amd-checkers.txt  cert-c-all.config  flist-opensil_config.txt  json.sh  meson.build  meson_options.txt
Documentation/: readme.md
xPRF/: meson.build  xPRF.c  xPRF.h
xPRF/CCX/: meson.build  xPrfCcx.c  xPrfCcx.h
xPRF/Mem/: meson.build  xPrfMem.c  xPrfMem.h  xPrfMemSpd5.h
xPRF/NBIO/: meson.build  xPrfNbio.c  xPrfNbio.h
xPRF/RAS/: meson.build  xPrfRas.c  xPrfRasServices.c
xSIM/: IpHandler.h  ProjSktConst.h  ProjSocConst.h  meson.build  xSIM.c  xSIM.h
xSIM/Skt/: Sp5Charz.h
xSIM/SoC/: Kconfig  meson.build
xSIM/SoC/F19M10/: F19M10Charz.h  IpBlkListF19M10Tp1.c  IpBlkListF19M10Tp2.c  IpBlkListF19M10Tp3.c  Kconfig  meson.build
xUSL/: AmdFeatures.c  Apob.c  BaseSocLogicalIdXlat.c  BaseSocLogicalIdXlat.h  CoreTopologyService.c  CoreTopologyService.h  SilGbls.c  SocLogicalId.c  meson.build
xUSL/CCX/: CcxClass-api.h  CcxIp2Ip.h  CcxZen4-api.h  Kconfig  meson.build
xUSL/CCX/Common/: AmdTable.c  AmdTable.h  ApAsm32.nasm  ApAsm64.nasm  Ccx.c  Ccx.h  CcxApLaunch32.c  CcxApLaunch64.c  CcxApic.h  CcxBrandString.c  CcxBrandString.h  CcxC6.c  CcxCacheInit.c  CcxCacheInit.h  CcxCmn2Rev.h  CcxDownCoreInit.c  CcxDownCoreInit.h  CcxMicrocodePatch.c  CcxMicrocodePatch.h  CcxMiscInit.c  CcxReg.h  CcxSetMca.c  Kconfig  SocServices.c  SocServices.h  meson.build
xUSL/CCX/Zen4/: CcxCmn2Zen4.c  CcxCmn2Zen4.h  CcxResetTablesZen4.c  Zen4.c  Zen4.h  Zen4DownCoreInit.c  Zen4DownCoreInit.h  Zen4Reg.h  meson.build
xUSL/CommonLib/: CpuLib.h  CpuLib32.nasm  CpuLib64.nasm  CpuOps.c  CpuOps32.nasm  CpuOps64.nasm  IPC.c  Io.h  IoOps32.nasm  IoOps64.nasm  Mmio.h  MmioOps.c  PciOps.c  Pstates.c  SilServices.c  SmnAccess.c  SmnAccess.h  Utils.c  meson.build  xUslCcxRoles.c
xUSL/Cxl/: CxlClass-api.h  meson.build
xUSL/Cxl/Common/: CxlClassDflts.c  CxlCmn2Rev.h  CxlInit.c  CxlInit.h  meson.build
xUSL/Cxl/Genoa/: Cxl.c  Cxl.h  CxlCmn2.c  meson.build
xUSL/DF/: Df.c  Df.h  DfClass-api.h  DfClassDflts.c  DfIp2Ip.h  meson.build
xUSL/DF/Common/: BaseFabricTopologyCmn.c  BaseFabricTopologyCmn.h  DfCmn2Rev.h  FabricRegisterAccCmn.c  FabricRegisterAccCmn.h  SilBaseFabricTopologyLib.h  SilFabricInfo.h  meson.build
xUSL/DF/DfX/: DfCmn2Rev4.c  DfX.c  DfX.h  DfXBaseFabricTopology.c  DfXBaseFabricTopology.h  DfXFabricRegisterAcc.c  DfXFabricRegisterAcc.h  DfXFabricWdt.c  DfXFabricWdt.h  SilFabricRegistersDfX.h  meson.build
xUSL/DF/DfX/FabricAcpiDomain/: FabricAcpiDomainInfo.c  FabricAcpiDomainInfo.h  meson.build
xUSL/DF/DfX/FabricDfClkGatingInit/: FabricDfClkGatingInit.c  FabricDfClkGatingInit.h  meson.build
xUSL/DF/DfX/FabricPieRasInit/: FabricPieRasInit.c  FabricPieRasInit.h  meson.build
xUSL/FCH/: FchIp2Ip.h  FchSataIp2Ip.h  meson.build
xUSL/FCH/9004/: FchSn.c  FchSn.h  meson.build
xUSL/FCH/9004/FchCore/: meson.build
xUSL/FCH/9004/MultiFch/: MultiFchCmn2Sn.c  MultiFchCmn2Sn.h  MultiFchSn.c  MultiFchSn.h  meson.build
xUSL/FCH/Common/: FCHClass-api.h  Fch.c  Fch.h  FchCommon.c  FchCommon.h  FchCommonCfg.h  FchHelper.c  FchHelper.h  FchImc.h  FchInitProtocol.h  FchPT.h  FchReg.h  LegacyInterrupt.c  LegacyInterrupt.h  meson.build
xUSL/FCH/Common/FchCore/: FchEnvDef.c  meson.build
xUSL/Include/: AmdFeatures.h  Apob.h  ApobCmn.h  IPC.h  MsrReg.h  Pci.h  PciExpress.h  Porting.h  Pstates.h  SilCommon.h  SilPcie.h  SilSocLogicalId.h  Utils.h  xUslCcxRoles.h
xUSL/MEM/: Mem.c  Mem.h  MemClass-api.h  meson.build
xUSL/Mpio/: Kconfig  MpioClass-api.h  MpioIp2Ip.h  Read.me
xUSL/Mpio/Common/: Deli.h  Kconfig  MpioAncDataV1.c  MpioCfgPoints.c  MpioClassDflts.c  MpioCmn2Rev.h  MpioDebugOut.c  MpioEarlyTrain.c  MpioInit.c  MpioInitFlow.c  MpioInitLib.h  MpioLib.c  MpioLib.h  MpioLibLocal.h  MpioMappingResults.c  MpioParser.c  MpioPcie.c  MpioPcie.h  MpioPortVisibility.c  MpioStructs.h  MpioSupportFunctions.c  MpioTopology.c  MpioTrainingResults.c  MpioUbmTopology.c  Read.me  meson.build
xUSL/Mpio/Genoa/: Mpio.c  Mpio.h  MpioCfgPoints.c  MpioCmn2.c  MpioCmn2.h  MpioPcie.c  MpioPcieStraps.h  MpioPortVisibility.c  MpioTopology.c  meson.build
xUSL/NBIO/: GnbDxio.h  Kconfig  Nbio.c  Nbio.h  NbioClass-api.h  NbioCommon.h  NbioIp2Ip.h  NbioPcieTopologyHelper.c  NbioPcieTopologyHelper.h  PciStructs.h  meson.build
xUSL/NBIO/IOD/: GnbRegisters.h  Kconfig  NbioBaseInitGenoa.c  NbioCommon.c  NbioData.c  NbioData.h  NbioDefaults.h  NbioHidePcieCore.c  NbioIoApic.c  NbioIoApic.h  NbioIoapicTbl.h  NbioIod.c  NbioIod.h  NbioIohcTbl.h  NbioIommu.c  NbioIommuTbl.h  NbioNbifTbl.h  NbioPcie.c  NbioPcie.h  NbioPcieComplexData.c  NbioPcieComplexData.h  NbioPcieStraps.h  NbioSmnTable.c  NbioSmnTable.h  NbioSmnTables.c  NbioTopMem.c  NbioWorkaroundTbl.h  PkgTypeFixups.c  Read.me  meson.build
xUSL/RAS/: RasDefs.h  RasIp2Ip.h  meson.build
xUSL/RAS/Common/: Ras.c  Ras.h  RasClass-api.h  RasCmn2Rev.h  RasReg-api.h  RasReg.h  meson.build
xUSL/RAS/Genoa/: RasCmn2Genoa.c  RasGenoa.c  RasGenoa.h  SocLibGenoa.c  meson.build
xUSL/RcMgr/: FabricRcInit.c  FabricResourceManager.h  RcMgrIp2Ip.h  meson.build
xUSL/RcMgr/DfX/: FabricRcInitBasedOnNv4.c  FabricRcInitDfX.c  FabricRcInitDfX.h  FabricResourceManager.c  RcManager4-api.h  meson.build
xUSL/SMU/: SmuDefs.h  SmuIp2Ip.h  meson.build
xUSL/SMU/Common/: SmuCmn2Rev.h  SmuCommon.c  SmuCommon.h  meson.build
xUSL/SMU/V13/: SmuCmn2V13.c  SmuV13.c  SmuV13.h  SmuV13Reg.h  meson.build
xUSL/Sdci/: Kconfig  SdciClass-api.h
xUSL/Sdci/Common/: Kconfig  Sdci.c  Sdci.h  SdciClassDflts.c  SdciCmn2Rev.h  meson.build
xUSL/Sdci/Genoa/: Sdci.c  Sdci.h  SdciCmn2.c  meson.build
xUSL/XMP/: Kconfig  XmpClass-api.h  XmpIp2Ip.h  XmpRevA-api.h  XmpRevB-api.h  meson.build
xUSL/XMP/Common/: Kconfig  XmpClass.h  XmpCmn2Rev.h  XmpCmnDflts.c  XmpCommon.c  XmpCommon.h  meson.build
xUSL/XMP/Ver-A/: Kconfig  XmpCmn2RevA.c  XmpDflts-A.c  XmpEntry-A.c  XmpIp2IpA.c  meson.build
xUSL/XMP/Ver-B/: Kconfig  XmpCmn2RevB.c  XmpDflts-B.c  XmpEntry-B.c  XmpIp2IpB.c  meson.build
(+103 files in other folders)
