# Copyright 2021-2023 Advanced Micro Devices, Inc. All rights reserved.
# SPDX-License-Identifier: MIT

xusl += files([ 'DfXBaseFabricTopology.c', 'DfX.c', 'DfXFabricRegisterAcc.c',
                'DfCmn2Rev4.c', 'DfXFabricWdt.c', 'DfXBaseFabricTopology.c' ])

incdir += include_directories( '.' )

subdir('FabricDfClkGatingInit')
subdir('FabricPieRasInit')
subdir('FabricAcpiDomain')
