# Copyright 2021-2023 Advanced Micro Devices, Inc. All rights reserved.
# SPDX-License-Identifier: MIT

incdir += include_directories( '.' )

xusl += files([ 'MpioAncDataV1.c', 'MpioCfgPoints.c', 'MpioClassDflts.c',
                'MpioDebugOut.c', 'MpioEarlyTrain.c', 'MpioLib.c',
                'MpioInit.c', 'MpioInitFlow.c', 'MpioMappingResults.c',
                'MpioParser.c', 'MpioPcie.c', 'MpioPortVisibility.c',
                'MpioSupportFunctions.c', 'MpioTopology.c',
                'MpioTrainingResults.c', 'MpioUbmTopology.c' ])
