# Copyright 2021-2023 Advanced Micro Devices, Inc. All rights reserved.
# SPDX-License-Identifier: MIT

xusl += files([
                'NbioIod.c',
                'NbioBaseInitGenoa.c',
                'NbioCommon.c',
                'NbioData.c',
                'NbioIoApic.c',
                'NbioIommu.c',
                'NbioPcie.c',
                'NbioPcieComplexDataGenoa.c',
                'NbioSmnTable.c',
                'NbioSmnTables.c',
                'NbioHidePcieCore.c',
                'NbioTopMem.c',
                'PkgTypeFixups.c' ])

incdir += include_directories( '.' )
incdir += include_directories( 'include' )
